Improve matchers to display match messages - in progress